version/0.31/_sources/api/solver/_autosummary/settings/momentum_10.rst.txt
:orphan:

.. _momentum_10:

momentum
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.momentum_10
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ==================================

Attribute                                                                                         Summary

====================================================================   ==================================
:ref:`system_coupling <system_coupling_1>`                                              System Coupling?.

:ref:`velocity_specification_method <velocity_specification_method>`       Velocity Specification Method.

:ref:`reference_frame <reference_frame_5>`                                               Reference frame.

:ref:`velocity_magnitude <velocity_magnitude>`                                        Velocity Magnitude.

:ref:`initial_gauge_pressure <initial_gauge_pressure>`                                    Gauge Pressure.

:ref:`coordinate_system <coordinate_system>`                                           Coordinate System.

:ref:`velocity_components <velocity_components>`                                     Velocity components.

:ref:`flow_direction <flow_direction>`                                         Flow direction components.

:ref:`axis_direction <axis_direction_2>`                                       Axis direction components.

:ref:`axis_origin <axis_origin_2>`                                                Axis origin components.

:ref:`swirl_angular_velocity <swirl_angular_velocity>`                                Help not available.

:ref:`gauge_pressure <gauge_pressure>`                                                    Gauge Pressure.

:ref:`acoustic_wave_model <acoustic_wave_model>`                                     Acoustic wave model.

:ref:`impedance_zero_order_term <impedance_zero_order_term>`                   Impedance zero order term.

:ref:`real_pole_series <real_pole_series>`                                      List of Real Pole Series.

:ref:`complex_pole_series <complex_pole_series>`                             List of Complex Pole Series.

:ref:`incoming_wave <incoming_wave>`                                                       Incoming wave.

====================================================================   ==================================

.. rubric:: Included in:

==================================================   ==========================================

Parent                                                                                  Summary

==================================================   ==========================================
:ref:`velocity_inlet_child <velocity_inlet_child>`       'child_object_type' of velocity_inlet.

:ref:`phase_24_child <phase_24_child>`                            'child_object_type' of phase.

:ref:`settings_27 <settings_27>`                             Domain name to define settings on.

:ref:`phase_50_child <phase_50_child>`                            'child_object_type' of phase.

==================================================   ==========================================

